[package]
name = "satellite-tracking"
version = "0.1.0"
authors = ["Rich Infante <rich@richinfante.com>"]
edition = "2018"

[dependencies]
satellite = { path = "../satellite-rs" }
# { git = "https://github.com/richinfante/satellite-rs.git", branch = "master" }
chrono = "0.4"
reqwest = "0.9.12"
space-plot = { path = "../space-plot" }
rand = "0.6.5"